Move to build-push-action@v2

--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -1,20 +1,26 @@
-name: Publish Docker image
+name: Publish Docker Image
 on:
   push:
     branches:
       - master
 jobs:
-  push_to_registry:
-    name: Push Docker image to GitHub Packages
+  main:
     runs-on: ubuntu-latest
     steps:
-      - name: Check out the repo
+      - name: Checkout
         uses: actions/checkout@v2
-      - name: Push to GitHub Packages
-        uses: docker/build-push-action@v1
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v1
+      - name: Login to Registry
+        uses: docker/login-action@v1
         with:
-          username: ${{ github.actor }}
-          password: ${{ secrets.GITHUB_TOKEN }}
-          registry: docker.pkg.github.com
-          repository: moyen-blog/go-dev/go-dev
-          tag_with_ref: true
+          registry: ghcr.io
+          username: ${{ github.repository_owner }}
+          password: ${{ secrets.CR_PAT }}
+      - name: Push Image
+        uses: docker/build-push-action@v2
+        with:
+          push: true
+          tags: |
+            ghcr.io/moyen-blog/go-dev:latest
+            ghcr.io/moyen-blog/go-dev:${GITHUB_REF:10}
